[gd_scene load_steps=4 format=3 uid="uid://c28gkmhvhs58v"]

[ext_resource type="Script" path="res://scenes/ui/game_ui.gd" id="1_7m06n"]
[ext_resource type="PackedScene" uid="uid://dg5choqce8gn3" path="res://scenes/ui/status_bars/ether_bar.tscn" id="1_xup2a"]
[ext_resource type="PackedScene" uid="uid://bb6pl2i42qjqf" path="res://scenes/ui/status_bars/health_bar.tscn" id="1_y6hwk"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
mouse_filter = 2
script = ExtResource("1_7m06n")

[node name="HealthBar" parent="." instance=ExtResource("1_y6hwk")]
layout_mode = 1
anchors_preset = 7
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -180.0
offset_bottom = 0.0
grow_vertical = 0
scale = Vector2(0.2, 0.2)
metadata/_edit_lock_ = true

[node name="EtherBar" parent="." instance=ExtResource("1_xup2a")]
layout_mode = 1
anchors_preset = 7
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -158.0
offset_bottom = 22.0
grow_vertical = 0
scale = Vector2(0.16, 0.16)
metadata/_edit_lock_ = true
